NoticeBoardApi/src/main/java/com/example/exception/error/RecommendException.java
package com.example.exception.error;

public class RecommendException extends RuntimeException {
    public RecommendException(String methodName) {
        super(String.format("Recommend 시스템 에러 (%s)",methodName));
    }
}
